# event_manager

./: .env_example  .gitignore  Makefile  README.md  docker-compose.yaml
backend/: Dockerfile  conftest.py  pyproject.toml  pytest.ini
backend/config/: celery.py  settings.py  urls.py
backend/event/: admin.py  tasks.py  urls.py
backend/event/api/serializers/: __init__.py  event.py  registration.py
backend/event/api/views/: __init__.py  event.py  registration.py
backend/event/migrations/: 0001_initial.py  0002_initial.py  0003_alter_event_max_attendees.py
backend/event/models/: __init__.py  choices.py  event.py  registration.py  review.py
backend/event/services/: __init__.py  cancel_registration.py  event_list.py  register.py
backend/event/tests/: factories.py  test_cancel_registration.py  test_events.py  test_registration.py  test_tasks.py
backend/user/: admin.py  urls.py
backend/user/api/serializers/: __init__.py  profile.py
backend/user/api/views/: __init__.py  profile.py
backend/user/migrations/: 0001_initial.py
backend/user/models/: user.py
backend/user/tests/: factories.py  test_profile.py
