[project]
name = "event-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.7",
    "django-cors-headers>=4.9.0",
    "django-phonenumber-field>=8.4.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.30.0",
    "factory-boy>=3.3.3",
    "flower>=2.0.1",
    "phonenumbers>=9.0.34",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "redis>=8.0.1",
]

# конфиги RUFF
[tool.ruff]
line-length = 100
show-fixes = true
# src = ["backend"]

extend-exclude =[
    "migrations",
    "settings.py",
]

[tool.ruff.lint]
ignore = ["F401"]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "T20",  # flake8-print
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
]

[tool.ruff.format]
quote-style = "single"
